--- a/tests/test_piaf_one_ok_no_agent.yml
+++ b/tests/test_piaf_one_ok_no_agent.yml
@@ -23,7 +23,7 @@ stories:
     - ask_piaf_1_ok: true
   - action: utter_satisfaction
   - user: |
-      /satisfaction_deny{'ask_piaf_1_ok': false, 'ask_piaf_2_ok': false}
+      /satisfaction_deny{"ask_piaf_1_ok": false, "ask_piaf_2_ok": false}
     intent: satisfaction_deny
   - action: utter_rephrase_piaf_1
   - action: action_send_tree
@@ -101,7 +101,7 @@ stories:
     - ask_piaf_1_ok: true
   - action: utter_satisfaction
   - user: |
-      /satisfaction_deny
+      /satisfaction_deny{"ask_piaf_1_ok": false, "ask_piaf_2_ok": false}
     intent: satisfaction_deny
   - action: utter_rephrase_piaf_2
   - action: utter_activate_text
@@ -169,7 +169,7 @@ stories:
     - ask_piaf_1_ok: true
   - action: utter_satisfaction
   - user: |
-      /satisfaction_deny
+      /satisfaction_deny{"ask_piaf_1_ok": false, "ask_piaf_2_ok": false}
     intent: satisfaction_deny
   - action: utter_rephrase_piaf_2
   - action: utter_activate_text
