--- a/tests/test_piaf_two_ok_agent.yml
+++ b/tests/test_piaf_two_ok_agent.yml
@@ -48,7 +48,7 @@ stories:
   - action: action_send_tree
   - action: utter_satisfaction
   - user: |
-      /satisfaction_deny
+      /satisfaction_deny{"ask_piaf_1_ok": false, "ask_piaf_2_ok": false}
     intent: satisfaction_deny
   - action: utter_ask_agent
   - user: |
